# imageSICS

./: .env  .env.example  .gitignore  .vercelignore  INSTALL.md  INTERNET_SEARCH_SETUP.md  README.md  create_test_image_with_metadata.py  generate_test_image.py  requirements.txt  vercel.json  verify_frontend.py
api/: index.py
apps/api/: pyproject.toml
apps/api/src/imagesics_api/: main.py
apps/api/src/imagesics_api/routers/: forensic.py  uploads.py
apps/monolith/: app.py
apps/monolith/routes/: forensic.py  uploads.py
apps/monolith/static/css/: animations.css  hex-editor.css  main.css  style.css
apps/monolith/static/js/: app-tools.js  app.js  charts.js  hex-editor.js  image-viewer.js  interactive-tools.js  loading.js  toast.js
apps/monolith/templates/: index.html  layout.html
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/Dock/: DockManager.tsx
apps/web/src/components/Panels/: CloningPanel.tsx  ComparisonPanel.tsx  DigestPanel.tsx  ElaPanel.tsx  GenericResultPanel.tsx  GhostMapPanel.tsx  HexEditorPanel.tsx  HistogramPanel.tsx  LocationPanel.tsx  MetadataPanel.tsx  OriginalImagePanel.tsx  ResamplingPanel.tsx  ResultGrid.tsx  ReverseSearchPanel.tsx  SplicingPanel.tsx  StatsPanel.tsx  TruForPanel.tsx
apps/web/src/components/Sidebar/: Sidebar.tsx
apps/web/src/types/: flexlayout-react.d.ts
scripts/: setup_dev.sh
tests/: README.md  __init__.py  test_all.py  test_backend.py  test_forensic_modules.py  test_routes.py  verify_frontend.py
(+9 files in other folders)
